--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
 	"_version": "1.12.0",
 	"sap.app": {
-		"id": "SolicitarCita.SolicitarCita",
+		"id": "solicitarcitapr",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"applicationVersion": {
@@ -35,10 +35,9 @@
 	"sap.ui5": {
 		"flexEnabled": false,
 		"rootView": {
-			"viewName": "SolicitarCita.SolicitarCita.view.Login",
+			"viewName": "solicitarcitapr.view.Login",
 			"type": "XML",
-			"async": true,
-			"id": "Login"
+			"async": true
 		},
 		"dependencies": {
 			"minUI5Version": "1.65.6",
@@ -56,8 +55,23 @@
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "SolicitarCita.SolicitarCita.i18n.i18n"
+					"bundleName": "solicitarcitapr.i18n.i18n"
 				}
+			},
+			"oModel": {
+				"type": "sap.ui.model.json.JSONModel",
+				"preload": true,
+				"settings": {}
+			},
+			"oModelGet": {
+				"type": "sap.ui.model.json.JSONModel",
+				"preload": true,
+				"settings": {}
+			},
+			"oModelUser": {
+				"type": "sap.ui.model.json.JSONModel",
+				"preload": true,
+				"settings": {}
 			}
 		},
 		"resources": {
@@ -70,16 +84,41 @@
 				"routerClass": "sap.m.routing.Router",
 				"viewType": "XML",
 				"async": true,
-				"viewPath": "SolicitarCita.SolicitarCita.view",
+				"viewPath": "solicitarcitapr.view",
 				"controlAggregation": "pages",
 				"controlId": "app",
 				"clearControlAggregation": false
 			},
-			"routes": [{
-				"name": "RouteLogin",
-				"pattern": "RouteLogin",
-				"target": ["TargetLogin"]
-			}],
+			"routes": [
+				{
+					"name": "RouteLogin",
+					"pattern": ":?query:",
+					"target": [
+						"TargetLogin"
+					]
+				},
+				{
+					"name": "RouteMain",
+					"pattern": "Main/:app:",
+					"target": [
+						"TargetMain"
+					]
+				},
+				{
+					"name": "RouteOrderNoOC",
+					"pattern": "OrderNoOC/:app:",
+					"target": [
+						"TargetOrderNoOC"
+					]
+				},
+				{
+					"name": "RouteOrderOC",
+					"pattern": "OrderOC/:app:",
+					"target": [
+						"TargetOrderOC"
+					]
+				}
+			],
 			"targets": {
 				"TargetLogin": {
 					"viewType": "XML",
@@ -87,6 +126,27 @@
 					"clearControlAggregation": false,
 					"viewId": "Login",
 					"viewName": "Login"
+				},
+				"TargetMain": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearControlAggregation": false,
+					"viewId": "Main",
+					"viewName": "Main"
+				},
+				"TargetOrderNoOC": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearControlAggregation": false,
+					"viewId": "OrderNoOC",
+					"viewName": "OrderNoOC"
+				},
+				"TargetOrderOC": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearControlAggregation": false,
+					"viewId": "OrderOC",
+					"viewName": "OrderOC"
 				}
 			}
 		}
