--- a/neo-app.json
+++ b/neo-app.json
@@ -51,6 +51,7 @@
   "headerWhiteList": [
     "sToken",
     "sIdTransaccion",
-    "sAplicacion"
+    "sAplicacion",
+    "Access-Control-Allow-Origin"
   ]
 }
